# voice_biometric_python

./: .dockerignore  .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  main.py  ml_engine.py  pyproject.toml  requirement.txt  requirements.txt  vector_db.py
client/: Dockerfile
client/src/app/: page.tsx
client/src/components/: VoiceAuth.tsx
storage/chroma_db/: chroma.sqlite3
