[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioread>=3.1.0",
    "chromadb>=1.3.5",
    "fastapi>=0.121.2",
    "huggingface-hub>=1.1.4",
    "motor>=3.7.1",
    "numpy>=2.3.5",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "setuptools<81",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn>=0.38.0",
    "verifyvoice>=0.1.34",
    "webrtcvad>=2.0.10",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
